# udapc

./: README.md  out.INFO  output_imputed.phy  pyproject.toml  test_dapc.py  unlda_test.py
dim_reduction/: dim_reduction.py
discriminant_analysis/: discriminant_analysis.py
example_data/: genotypes.vcf  labels.csv  mah_drainage.popmap  mah_sub100_subset.recode.vcf.gz.tbi  mah_thin_subset.recode.vcf.gz.tbi  samples.txt
read_input/: impute.py  read_input.py
src/udapc/: cli.py
src/udapc/discriminant_analysis/: unlda.py
src/udapc/read_input/: read_input.py
src/udapc/simple_imputers/: impute.py  simple_imputers.py
src/udapc/utils/: sequence_tools.py
udapc/dim_reduction/: dim_reduction.py  embed.py
udapc/discriminant_analysis/: discriminant_analysis.py  unlda.py  unlda_V1.py
udapc/read_input/: read_input.py  simgenodata.py
udapc/utils/: misc.py
utils/: sequence_tools.py
